# Recorder

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  config.inc  config.sh  configure.ac  exclusion_prefix.txt
.github/workflows/: cmake.yml
CMake/: recorder-config-version.cmake.in  recorder-config.cmake.build.in  recorder-config.cmake.install.in
docs/: README.md  changes.rst  features.rst  index.rst
docs/reports/: index.html  index.md  sod_2d_ug.html
docs/source/: build.rst  changes.rst  conf.py  features.rst  index.rst  overview.rst  postprocessing.rst  usage.rst
exp/: reader.cc  reader.h
include/: '  .recorder.h.swp  hashmap.h  recorder-cuda-profiler.h  recorder-dynamic.h  recorder-gotcha.h  recorder-log-format.h  recorder-logger.h  recorder-pattern-recognition.h  recorder-sequitur.h  recorder-timestamps.h  recorder-utils.h  recorder.h
lib/: .recorder-mpi-init-finalize.c.swp  CMakeLists.txt  Makefile.am  hashmap.c  logger.c  otf2_writer.c  recorder-cst-cfg.c  recorder-cuda-profiler.c  recorder-function-profiler.c  recorder-gotcha.c  recorder-hdf5.c  recorder-hdf5.po  recorder-init-finalize.c  recorder-logger.c  recorder-mpi-init-finalize.c  recorder-mpi-init-finalize.po  recorder-mpi-io.c  recorder-mpi-io.po  recorder-mpi.c  recorder-pattern-recognition.c  recorder-posix.c  recorder-posix.po  recorder-sequitur-digram.c  recorder-sequitur-logger.c  recorder-sequitur-symbol.c  recorder-sequitur-utils.c  recorder-sequitur.c  recorder-timestamps.c  recorder-utils.c  util.c
m4/: README
test/: quartz188-a.out-114862.core  test_hdf5.c  test_hybrid.c  test_mpi.c  test_phdf5.c  test_posix.c  test_signal.c  vec.cu
test/logs/: 0.itf  0.mt
tools/: .report.py.swp  .vis.py.swp  CMakeLists.txt  Makefile  Makefile.am  bin2text.c  bin2text.py  build_offset_intervals.cpp  compress.c  conflict_detector  conflict_detector.c  conflict_detector.cpp  html_writer.py  meta_ops_checker.c  otf2-converter  otf2-converter.c  otf2_converter.c  overlap_conflict.c  patterns.py  reader-cst-cfg.c  reader-private.h  reader.c  reader.h  reader.py  recorder-summary.c  recorder2parquet  recorder2parquet.cpp  recorder2text  recorder2text.c  recorder2timeline.cpp  recorder_query.c  recorder_summary.c  report.py  requirements.txt  simple_report.html  test.py  vis.py
tools/.libs/: conflict_detector  librreader.lai  recorder2text
tools/C/: build_offset_list.cpp  overlap_conflit.cpp  reader.c  reader.cpp  reader.h  recorder2text.c
tools/h5reporter/: build_offset_intervals.py  html_writer.py  reader.py  reporter.py
tools/reporter/: Makefile.am  build_offset_intervals.py  creader_wrapper.py  exp_plot.py  html_writer.py  reader.py  recorder2text.py  reporter.py  test.html  vis.py
tools/verifyio/: README.md  gen_networkx.py  gen_nodes.py  match_mpi.py  read_conflicts.py  read_nodes.py  vector_clock.py  verifyio.py  verifyio_graph.py  visualize.py
